# ontodoc

./: .gitignore  .prettierignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build_doc.yaml  publish.yaml
example/: foaf.ttl
example/custom_templates/: schemaStyle.md
ontodoc/: cli.py  generate_page.py  ontology_properties.py  utils.py
ontodoc/classes/: Class.py  Documentation.py  Footer.py  Generic.py  JSONOntoDocEncoder.py  Ontology.py  Property.py
ontodoc/templates/: class.md  footer.md  homepage.md  property.md
ontomdoc/: cli.py  node_class.py  utils.py
ontomdoc/templates/: class.md  homepage.md
